# ChangeLog for app-office/libreoffice
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.57 2011/07/26 18:20:01 scarabeus Exp $

  26 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.2.2.ebuild:
  Introduce branding useflag, yay gentoo screen and about, Thanx to Ian Whyman
  for this.

  26 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  files/libreoffice-fix-sandbox-install.patch:
  Update sandbox fix to honour TMPDIR variable instead of placing it to
  distdir.

  26 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/libreoffice-as-needed-gtk-2.patch, libreoffice-3.4.2.2.ebuild,
  +files/libreoffice-fix-sandbox-install.patch,
  files/libreoffice-as-needed-gtk.patch:
  Fix the gtk patch, add patch for sandbox violation during install, enforce
  not-stripping of solver, portage handle it himself.

  26 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.2.2.ebuild:
  Set default theme to crystal, set jobs to 1 if the sed does not find any
  value, and rename the variable to not collide with bash jobs command.

  26 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/libreoffice-as-needed-gtk-2.patch, libreoffice-3.4.2.2.ebuild,
  +files/libreoffice-as-needed-gtk.patch:
  Fix as-needed linking on the quickstarter. Patches backported from upstream
  trunk. Fixes gentoo bug #376469.

  25 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.2.2.ebuild, -files/libreoffice-unfigured-options.txt,
  metadata.xml:
  Make vba scripting optional. Punt undecided.txt file with unknown opts as we
  set all those that we require.

  25 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.2.2.ebuild:
  Disable pch (precompiled headers) support as it creates just build crashes.

  25 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.2.2.ebuild: