@@ -10,6 +10,8 @@ version</longdescription>
 <use>
 	<flag name='binfilter'>Enable support for legacy StarOffice 5.x and earlier
 		file formats</flag>
+	<flag name='graphite'>Enable support for non-Roman fonts via
+		<pkg>media-gfx/graphite2</pkg></flag>
 	<flag name='odk'>Build the Office Development Kit</flag>
 	<flag name='offlinehelp'>Install help files locally instead of
 		using the LibreOffice Wiki</flag>
